barista: Added a backend application and search endpoints.
Added a backend application for api service routes. Primarily this will
searve the search for now, but should eventually be usable for universal
rendering and other integration features with the cms.

Fixes #17

--- a/nx.json
+++ b/nx.json
@@ -228,6 +228,9 @@
     },
     "tree-table": {
       "tags": ["scope:components", "type:library"]
+    },
+    "barista-backend": {
+      "tags": ["type:app"]
     }
   }
 }
